--- a/A03_SOMA_CODINGTEST/B_21_25/C22_D-09_260226.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C22_D-09_260226.ipynb
@@ -2,95 +2,247 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "-24\n"
+     ]
+    }
+   ],
    "source": [
+    "# 1. 알고(구현): 백준 14888 (연산자 끼워넣기) - https://www.acmicpc.net/problem/14888\n",
     "\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "1 2 3 4 5 6\n",
+    "2 1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = list(map(int, input().split()))\n",
+    "    opers = list(map(int, input().split()))\n",
+    "    # plus, minus, multi, div\n",
     "\n",
-    "    pass\n",
+    "    min_val, max_val = float('inf'), -float('inf')\n",
+    "\n",
+    "    def dfs(num_idx, answer):\n",
+    "        nonlocal min_val, max_val\n",
+    "\n",
+    "        if num_idx == N:\n",
+    "            min_val = min(min_val, answer)\n",
+    "            max_val = max(max_val, answer)\n",
+    "            return\n",
+    "\n",
+    "        nxt_num = nums[num_idx]\n",
+    "        for i in range(4):\n",
+    "            oper = opers[i]     # 남은 개수\n",
+    "            if oper == 0:\n",
+    "                continue\n",
+    "\n",
+    "            nxt_answer = answer\n",
+    "            if i == 0:\n",
+    "                nxt_answer += nxt_num\n",
+    "            elif i == 1:\n",
+    "                nxt_answer -= nxt_num\n",
+    "            elif i == 2:\n",
+    "                nxt_answer *= nxt_num\n",
+    "            else:\n",
+    "                nxt_answer = int(nxt_answer / nxt_num)\n",
+    "\n",
+    "            opers[i] -= 1\n",
+    "            dfs(num_idx + 1, nxt_answer)\n",
+    "            opers[i] += 1\n",
+    "\n",
+    "    dfs(1, nums[0])\n",
+    "    print(max_val)\n",
+    "    print(min_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "3\n",
+      "21\n",
+      "135\n",
+      "1033\n",
+      "8392\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 4948 (베르트랑 공준) - https://www.acmicpc.net/problem/4948\n",
     "import sys\n",
+    "from math import isqrt\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''1\n",
+    "10\n",
+    "13\n",
+    "100\n",
+    "1000\n",
+    "10000\n",
+    "100000\n",
+    "0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    MAX = 2*123_456\n",
+    "    is_prime = [True] * (MAX + 1)\n",
+    "    is_prime[0] = is_prime[1] = False\n",
+    "\n",
+    "    for i in range(2, isqrt(MAX) + 1):\n",
+    "        if not is_prime[i]:\n",
+    "            continue\n",
+    "        is_prime[i*i: MAX+1: i] = [False] * len(range(i*i, MAX+1, i))\n",
+    "\n",
+    "    prefix = [0] * (MAX + 1)\n",
+    "\n",
+    "    cnt = 0\n",
+    "    for i in range(1, MAX + 1):\n",
+    "        if is_prime[i] == True:\n",
+    "            cnt += 1\n",
+    "        prefix[i] = cnt\n",
+    "\n",
+    "    while True:\n",
+    "        num = int(input())\n",
+    "        if num == 0:\n",
+    "            break\n",
+    "        print(prefix[2*num] - prefix[num])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "1\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Heap): 백준 11279 (최대 힙) - https://www.acmicpc.net/problem/11279\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''13\n",
+    "0\n",
+    "1\n",
+    "2\n",
+    "0\n",
+    "0\n",
+    "3\n",
+    "2\n",
+    "1\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    pq = []\n",
+    "    answer = []\n",
+    "    for _ in range(N):\n",
+    "        cmd = int(input())\n",
     "\n",
+    "        if cmd > 0:\n",
+    "            heappush(pq, -cmd)\n",
+    "        elif pq:\n",
+    "            answer.append(str(-heappop(pq)))\n",
+    "        else:\n",
+    "            answer.append('0')\n",
+    "        \n",
+    "    print(\"\\n\".join(answer))\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99437\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1339 (단어 수학) - https://www.acmicpc.net/problem/1339\n",
     "import sys\n",
+    "from collections import defaultdict\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "GCF\n",
+    "ACDEB''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    words = [reversed(input().rstrip()) for _ in range(N)]\n",
+    "    \n",
+    "    weight_dict = defaultdict(int)\n",
     "\n",
-    "    pass\n",
+    "    for word in words:\n",
+    "        for i, char in enumerate(word):\n",
+    "            weight_dict[char] += 10**i\n",
+    "    \n",
+    "    weights = sorted(weight_dict.values(), reverse=True)\n",
+    "    print(sum(digit * w for digit, w in zip(range(9, -1, -1), weights)))\n",
     "\n",
     "\n",
     "solve()\n"
@@ -102,32 +254,104 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 연도별 평균 미세먼지 농도 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/284530\n",
+    "SELECT\n",
+    "    YEAR(YM) AS `YEAR`,\n",
+    "    ROUND(AVG(PM_VAL1), 2) AS `PM10`,\n",
+    "    ROUND(AVG(PM_VAL2), 2) AS `PM2.5`\n",
+    "FROM\n",
+    "    AIR_POLLUTION\n",
+    "WHERE \n",
+    "    (LOCATION1, LOCATION2) = ('경기도', '수원')\n",
+    "GROUP BY\n",
+    "    `YEAR`\n",
+    "ORDER BY\n",
+    "    `YEAR` ASC\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 17779 (게리맨더링 2) - https://www.acmicpc.net/problem/17779\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8\n",
+    "1 2 3 4 5 6 7 8\n",
+    "2 3 4 5 6 7 8 9\n",
+    "3 4 5 6 7 8 9 1\n",
+    "4 5 6 7 8 9 1 2\n",
+    "5 6 7 8 9 1 2 3\n",
+    "6 7 8 9 1 2 3 4\n",
+    "7 8 9 1 2 3 4 5\n",
+    "8 9 1 2 3 4 5 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    total_pop = sum(sum(row) for row in board)\n",
+    "    min_diff = float('inf')\n",
+    "\n",
+    "    for x, y in product(range(N-2), range(1, N - 1)):\n",
+    "        for d1, d2 in product(range(1, y + 1), range(1, N - y)):\n",
+    "\n",
+    "            if x + d1 + d2 >= N:\n",
+    "                continue\n",
+    "\n",
+    "            population = [0] * 5\n",
+    "\n",
+    "            left = y + 1\n",
+    "            for r in range(x + d1):\n",
+    "                if r >= x:\n",
+    "                    left -= 1\n",
+    "                population[1] += sum(board[r][:left])\n",
+    "\n",
+    "            right = y + 1\n",
+    "            for r in range(x + d2 + 1):\n",
+    "                if r > x:\n",
+    "                    right += 1\n",
+    "                population[2] += sum(board[r][right:])\n",
+    "\n",
+    "            left = y - d1\n",
+    "            for r in range(x + d1, N):\n",
+    "                population[3] += sum(board[r][:left])\n",
+    "                if r < x + d1 + d2:\n",
+    "                    left += 1\n",
+    "\n",
+    "            right = y + d2\n",
+    "            for r in range(x + d2 + 1, N):\n",
+    "                population[4] += sum(board[r][right:])\n",
+    "                if r <= x + d1 + d2:\n",
+    "                    right -= 1\n",
+    "\n",
+    "            population[0] = total_pop - sum(population)  # 5번은 0에다가\n",
+    "\n",
+    "            current_diff = max(population) - min(population)\n",
+    "            min_diff = min(current_diff, min_diff)\n",
+    "\n",
+    "    print(min_diff)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -135,47 +359,112 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2565 (전깃줄) - https://www.acmicpc.net/problem/2565\n",
     "import sys\n",
+    "from bisect import bisect_left\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8\n",
+    "1 8\n",
+    "3 9\n",
+    "2 2\n",
+    "4 1\n",
+    "6 4\n",
+    "10 10\n",
+    "9 7\n",
+    "7 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    lines = sorted(tuple(map(int, input().split())) for _ in range(N))\n",
     "\n",
-    "    pass\n",
+    "    increse = []    # lis(Longest Increasing Subsequence)\n",
+    "    for _, num in lines:\n",
+    "        idx = bisect_left(increse, num)\n",
     "\n",
+    "        if idx == len(increse):\n",
+    "            increse.append(num)\n",
+    "        else:\n",
+    "            increse[idx] = num\n",
     "\n",
-    "solve()\n"
+    "    print(N - len(increse))\n",
+    "    \n",
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 11657 (타임머신) - https://www.acmicpc.net/problem/11657\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "1 2 4\n",
+    "1 3 3\n",
+    "2 3 -1\n",
+    "3 1 -2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    edges = [tuple(map(int, input().rsplit())) for _ in range(M)]\n",
+    "    INF = float('inf')\n",
     "\n",
-    "    pass\n",
+    "    min_dist = [INF] * (N + 1)\n",
+    "    min_dist[1] = 0\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for cur, nxt, time in edges:\n",
+    "\n",
+    "            cur_dist = min_dist[cur]\n",
+    "            if cur_dist == INF:  # 시작점 못옴\n",
+    "                continue\n",
+    "\n",
+    "            nxt_dist = cur_dist + time\n",
+    "            if nxt_dist >= min_dist[nxt]:    # 거리 갱신 필요 없음\n",
+    "                continue\n",
+    "\n",
+    "            if i == N - 1:         # N-1 번째 거리 갱신 필요하면 무한 루프\n",
+    "                return print(-1)\n",
+    "\n",
+    "            min_dist[nxt] = nxt_dist     # 최단거리 갱신\n",
+    "\n",
+    "    print(\"\\n\".join(\n",
+    "        str(d) if d != INF else '-1'\n",
+    "        for d in min_dist[2:]\n",
+    "    ))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -185,21 +474,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 17135 (캐슬 디펜스) - https://www.acmicpc.net/problem/17135\n",
     "import sys\n",
+    "from collections import deque\n",
+    "from itertools import combinations, product\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 5 2\n",
+    "1 0 1 0 1\n",
+    "0 1 0 1 0\n",
+    "1 1 0 0 0\n",
+    "0 0 0 1 1\n",
+    "1 1 0 1 1\n",
+    "0 0 1 0 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, D = map(int, input().split())\n",
+    "    origin = deque(list(map(int, input().split())) for _ in range(N))\n",
+    "    max_enemy = 0\n",
     "\n",
-    "    pass\n",
+    "    for combi in combinations(range(M), 3):\n",
+    "\n",
+    "        enemys = deque(row[:] for row in origin)\n",
+    "        del_enemy_cnt = 0\n",
+    "        for _ in range(N):\n",
+    "\n",
+    "            target = set()\n",
+    "            for ac in combi:    # 궁수 좌표\n",
+    "\n",
+    "                priority = []\n",
+    "                for er, ec in product(range(N), range(M)):\n",
+    "                    if enemys[er][ec] == 0:\n",
+    "                        continue\n",
+    "\n",
+    "                    dist = abs(N-er) + abs(ac-ec)\n",
+    "                    if dist <= D:\n",
+    "                        heappush(priority, (dist, ec, er))  # col 우선\n",
+    "\n",
+    "                if priority:\n",
+    "                    _, tc, tr = heappop(priority)       # 1 순위 지정\n",
+    "                    target.add((tr, tc))  # 타겟 저장\n",
+    "\n",
+    "            for dr, dc in target:\n",
+    "                enemys[dr][dc] = 0\n",
+    "                del_enemy_cnt += 1\n",
+    "\n",
+    "            enemys.pop()\n",
+    "            enemys.appendleft([0]*M)\n",
+    "\n",
+    "        max_enemy = max(max_enemy, del_enemy_cnt)\n",
+    "\n",
+    "    print(max_enemy)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -208,14 +540,53 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.3): 조건에 맞는 사용자와 총 거래금액 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/164668\n",
+    "WITH\n",
+    "    DONE AS (\n",
+    "        SELECT\n",
+    "            WRITER_ID AS USER_ID,\n",
+    "            SUM(PRICE) AS `TOTAL_SALES`\n",
+    "        FROM\n",
+    "            USED_GOODS_BOARD\n",
+    "        WHERE\n",
+    "            STATUS = 'DONE'\n",
+    "        GROUP BY\n",
+    "            WRITER_ID\n",
+    "        HAVING\n",
+    "            `TOTAL_SALES` >= 700000\n",
+    "    )\n",
+    "SELECT\n",
+    "    USER_ID,\n",
+    "    NICKNAME,\n",
+    "    TOTAL_SALES\n",
+    "FROM \n",
+    "    DONE\n",
+    "JOIN \n",
+    "    USED_GOODS_USER USING (USER_ID)\n",
+    "ORDER BY\n",
+    "    TOTAL_SALES ASC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
