--- a/A03_SOMA_CODINGTEST/B_21_25/C23_D-08_260227.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C23_D-08_260227.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 14503 (로봇 청소기) - https://www.acmicpc.net/problem/14503\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1010 (다리 놓기) - https://www.acmicpc.net/problem/1010\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Heap): 백준 11286 (절댓값 힙) - https://www.acmicpc.net/problem/11286\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1202 (보석 도둑) - https://www.acmicpc.net/problem/1202\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 물고기 종류 별 잡은 수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/293257\n",
     "```"
    ]
   },
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 20058 (마법사 상어와 파이어스톰) - https://www.acmicpc.net/problem/20058\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 10942 (팰린드롬?) - https://www.acmicpc.net/problem/10942\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 11657 (타임머신) - https://www.acmicpc.net/problem/11657\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 17135 (캐슬 디펜스) - https://www.acmicpc.net/problem/17135\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
