--- a/A03_SOMA_CODINGTEST/B_21_25/C23_D-08_260227.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C23_D-08_260227.ipynb
@@ -5,23 +5,78 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 14503 (로봇 청소기) - https://www.acmicpc.net/problem/14503\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''11 10\n",
+    "7 4 0\n",
+    "1 1 1 1 1 1 1 1 1 1\n",
+    "1 0 0 0 0 0 0 0 0 1\n",
+    "1 0 0 0 1 1 1 1 0 1\n",
+    "1 0 0 1 1 0 0 0 0 1\n",
+    "1 0 1 1 0 0 0 0 0 1\n",
+    "1 0 0 0 0 0 0 0 0 1\n",
+    "1 0 0 0 0 0 0 1 0 1\n",
+    "1 0 0 0 0 0 1 1 0 1\n",
+    "1 0 0 0 0 0 1 1 0 1\n",
+    "1 0 0 0 0 0 0 0 0 1\n",
+    "1 1 1 1 1 1 1 1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    r, c, d = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    wall = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    cleaned = [[False] * M for _ in range(N)]\n",
+    "\n",
+    "    directions = [(-1, 0), (0, +1), (+1, 0), (0, -1)]\n",
+    "    clean_cnt = 0\n",
+    "\n",
+    "    while True:\n",
+    "\n",
+    "        if not cleaned[r][c]:\n",
+    "            cleaned[r][c] = True\n",
+    "            clean_cnt += 1\n",
+    "\n",
+    "        for i in range(1, 5):\n",
+    "            temp_d = (d - i) % 4\n",
+    "            dr, dc = directions[temp_d]    # 진행 방향 반시계 방향 부터 조사.\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if wall[nr][nc]:\n",
+    "                continue\n",
+    "\n",
+    "            if not cleaned[nr][nc]:\n",
+    "                r, c, d = nr, nc, temp_d   # 전진, 방향 저장.\n",
+    "                break\n",
+    "\n",
+    "        else:   # 청소할 칸이 주변에 없으면\n",
+    "            dr, dc = directions[(d + 2) % 4]\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if wall[nr][nc]:\n",
+    "                break\n",
+    "\n",
+    "            r, c = nr, nc\n",
+    "\n",
+    "    print(clean_cnt)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -33,19 +88,29 @@
    "source": [
     "# 2. 알고(수학): 백준 1010 (다리 놓기) - https://www.acmicpc.net/problem/1010\n",
     "import sys\n",
+    "from math import comb\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "2 2\n",
+    "1 5\n",
+    "13 29''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    T = int(input())\n",
     "\n",
-    "    pass\n",
+    "    answer = []\n",
+    "    for _ in range(T):\n",
+    "        N, M = map(int, input().split())\n",
+    "        answer.append(str(comb(M, N)))\n",
+    "\n",
+    "    print(\"\\n\".join(answer))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -57,17 +122,46 @@
    "source": [
     "# 3. 알고(Heap): 백준 11286 (절댓값 힙) - https://www.acmicpc.net/problem/11286\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''18\n",
+    "1\n",
+    "-1\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "1\n",
+    "1\n",
+    "-1\n",
+    "-1\n",
+    "2\n",
+    "-2\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    \n",
+    "    out = []\n",
+    "    pq = []\n",
+    "    for _ in range(N):\n",
+    "        \n",
+    "        num = int(input())\n",
+    "        if not num:\n",
+    "            out.append(str(heappop(pq)[1]) if pq else '0')\n",
+    "        else:\n",
+    "            heappush(pq, (abs(num), num))\n",
     "\n",
-    "    pass\n",
-    "\n",
+    "    print(\"\\n\".join(out))\n",
     "\n",
     "solve()\n"
    ]
@@ -81,19 +175,48 @@
    "source": [
     "# 4. 알고(그리디): 백준 1202 (보석 도둑) - https://www.acmicpc.net/problem/1202\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 2\n",
+    "1 65\n",
+    "5 23\n",
+    "2 99\n",
+    "10\n",
+    "2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, K = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    jewels = sorted(tuple(map(int, input().split())) for _ in range(N))\n",
+    "    bags = sorted(int(input()) for _ in range(K))\n",
+    "\n",
+    "    total_value = 0\n",
+    "    jewel_idx = 0\n",
+    "    pq = []\n",
+    "    for can_bring in bags:\n",
+    "\n",
+    "        while True:\n",
+    "            if jewel_idx == N:\n",
+    "                break\n",
+    "\n",
+    "            weight, value = jewels[jewel_idx]\n",
+    "            if weight > can_bring:\n",
+    "                break\n",
+    "\n",
+    "            heappush(pq, -value)\n",
+    "            jewel_idx += 1\n",
+    "\n",
+    "        if pq:\n",
+    "            total_value += -heappop(pq)\n",
+    "\n",
+    "    print(total_value)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,32 +225,127 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.2): 물고기 종류 별 잡은 수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/293257\n",
+    "-- 5. SQL(Lv.2): 물고기 종류 별 잡은 수 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/293257\n",
+    "SELECT\n",
+    "    COUNT(*) AS FISH_COUNT,\n",
+    "    FISH_NAME\n",
+    "FROM\n",
+    "    FISH_INFO\n",
+    "JOIN\n",
+    "    FISH_NAME_INFO USING (FISH_TYPE)\n",
+    "GROUP BY\n",
+    "    FISH_TYPE, FISH_NAME \n",
+    "ORDER BY\n",
+    "    FISH_COUNT DESC;\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "284\n",
+      "64\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 20058 (마법사 상어와 파이어스톰) - https://www.acmicpc.net/problem/20058\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 1\n",
+    "1 2 3 4 5 6 7 8\n",
+    "8 7 6 5 4 3 2 1\n",
+    "1 2 3 4 5 6 7 8\n",
+    "8 7 6 5 4 3 2 1\n",
+    "1 2 3 4 5 6 7 8\n",
+    "8 7 6 5 4 3 2 1\n",
+    "1 2 3 4 5 6 7 8\n",
+    "8 7 6 5 4 3 2 1\n",
+    "1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, Q = map(int, input().split())\n",
+    "    M = 2 ** N\n",
     "\n",
-    "    pass\n",
+    "    board = [list(map(int, input().split())) for _ in range(M)]\n",
+    "    levels = list(map(int, input().split()))\n",
+    "\n",
+    "    directions = [(-1, 0), (1, 0), (0, -1), (0, 1)]\n",
+    "\n",
+    "    for L in levels:\n",
+    "        sub_size = 2**L\n",
+    "        new_board = [[0] * M for _ in range(M)]\n",
+    "\n",
+    "        # 배열 시계방향 회전\n",
+    "        for r, c in product(range(0, M, sub_size), repeat=2):    # 왼쪽 모서리\n",
+    "            for i, j in product(range(sub_size), repeat=2):\n",
+    "                new_board[r + j][c + sub_size-1 - i] = board[r+i][c+j]\n",
+    "\n",
+    "        melt_candi = []\n",
+    "        for r, c in product(range(M), repeat=2):\n",
+    "            if new_board[r][c] == 0:\n",
+    "                continue\n",
+    "\n",
+    "            adjust_cnt = 0\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                in_range = 0 <= nr < M and 0 <= nc < M\n",
+    "\n",
+    "                if in_range and new_board[nr][nc] > 0:\n",
+    "                    adjust_cnt += 1\n",
+    "\n",
+    "            if adjust_cnt < 3:\n",
+    "                melt_candi.append((r, c))\n",
+    "\n",
+    "        for r, c in melt_candi:\n",
+    "            new_board[r][c] -= 1\n",
+    "\n",
+    "        board = new_board\n",
+    "\n",
+    "    max_chunk = 0\n",
+    "    visited = [[False] * M for _ in range(M)]\n",
+    "    total_ice = sum(map(sum, board))\n",
+    "\n",
+    "    for r, c in product(range(M), repeat=2):\n",
+    "        if board[r][c] == 0 or visited[r][c]:\n",
+    "            continue\n",
+    "\n",
+    "        chunk = 1\n",
+    "        visited[r][c] = True\n",
+    "        stack = [(r, c)]\n",
+    "\n",
+    "        while stack:\n",
+    "            cur_r, cur_c = stack.pop()\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = cur_r + dr, cur_c + dc\n",
+    "                in_range = 0 <= nr < M and 0 <= nc < M\n",
+    "                if in_range and not visited[nr][nc] and board[nr][nc] > 0:\n",
+    "\n",
+    "                    chunk += 1\n",
+    "                    visited[nr][nc] = True\n",
+    "                    stack.append((nr, nc))\n",
+    "\n",
+    "        max_chunk = max(max_chunk, chunk)\n",
+    "\n",
+    "    print(total_ice)\n",
+    "    print(max_chunk)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -141,17 +359,44 @@
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7\n",
+    "1 2 1 3 1 2 1\n",
+    "4\n",
+    "1 3\n",
+    "2 5\n",
+    "3 3\n",
+    "5 7''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = list(map(int, input().split()))\n",
+    "    M = int(input())\n",
     "\n",
-    "    pass\n",
+    "    # dp[i][j] i ~ j 까지 펠린드롬인지 여부\n",
+    "    dp = [[0] * N for _ in range(N)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(i, N):\n",
+    "            if nums[i] != nums[j]:\n",
+    "                continue\n",
+    "\n",
+    "            if j - i < 2:\n",
+    "                dp[i][j] = 1\n",
+    "\n",
+    "            elif dp[i + 1][j - 1]:\n",
+    "                dp[i][j] = 1\n",
+    "\n",
+    "    answer = []\n",
+    "    for _ in range(M):\n",
+    "        S, E = map(int, input().split())\n",
+    "        answer.append(str(dp[S - 1][E - 1]))\n",
+    "\n",
+    "    print(\"\\n\".join(answer))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -161,45 +406,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. 알고(그래프): 백준 11657 (타임머신) - https://www.acmicpc.net/problem/11657\n",
+    "# 3. 알고(그래프): 백준 1516 (게임 개발) - https://www.acmicpc.net/problem/1516\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "10 -1\n",
+    "10 1 -1\n",
+    "4 1 -1\n",
+    "4 3 1 -1\n",
+    "3 3 -1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    build_time = [0] * N    # 건물 자체를 건설하는데 필요한 시간\n",
+    "    graph = [[] for _ in range(N)]\n",
+    "    in_degree = [0] * N   # 건설하는데 필요한 건물 수\n",
     "\n",
-    "    pass\n",
+    "    for i in range(N):\n",
+    "        line = list(map(int, input().split()))\n",
+    "        build_time[i] = line[0]\n",
+    "\n",
+    "        for pre in line[1:-1]:\n",
+    "            graph[pre-1].append(i)\n",
+    "            in_degree[i] += 1\n",
+    "\n",
+    "    dp = build_time[:]  # dp[i] = i 완료 최소 시간 (자신 값으로 시작)\n",
+    "\n",
+    "    # 선수 건물 필요 없는 것 부터 조사.\n",
+    "    dq = deque(i for i in range(N) if in_degree[i] == 0)\n",
+    "\n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "\n",
+    "        for nxt in graph[cur]:\n",
+    "            dp[nxt] = max(dp[nxt], dp[cur] + build_time[nxt])\n",
+    "            in_degree[nxt] -= 1\n",
+    "            if in_degree[nxt] == 0:\n",
+    "                dq.append(nxt)\n",
+    "\n",
+    "    print(\"\\n\".join(map(str, dp)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. 알고(백트래킹): 백준 17135 (캐슬 디펜스) - https://www.acmicpc.net/problem/17135\n",
+    "# 4. 알고(백트래킹): 백준 14889 (스타트와 링크) - https://www.acmicpc.net/problem/14889\n",
     "import sys\n",
+    "from itertools import combinations\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "0 1 2 3 4 5\n",
+    "1 0 2 3 4 5\n",
+    "1 2 0 3 4 5\n",
+    "1 2 3 0 4 5\n",
+    "1 2 3 4 0 5\n",
+    "1 2 3 4 5 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    score = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    all_members = set(range(N))\n",
     "\n",
-    "    pass\n",
+    "    min_diff = float('inf')\n",
+    "    for comb in combinations(range(N - 1), (N - 2) // 2):\n",
+    "        \n",
+    "        star_team = (N - 1,) + comb       # 한명 고정\n",
+    "        link_team = tuple(all_members.difference(star_team))\n",
+    "\n",
+    "        star_ability = sum(\n",
+    "            score[a][b] + score[b][a]\n",
+    "            for a, b in combinations(star_team, 2)\n",
+    "        )\n",
+    "\n",
+    "        link_ability = sum(\n",
+    "            score[a][b] + score[b][a]\n",
+    "            for a, b in combinations(link_team, 2)\n",
+    "        )\n",
+    "\n",
+    "        min_diff = min(min_diff, abs(star_ability - link_ability))\n",
+    "        if min_diff == 0:\n",
+    "            break\n",
+    "\n",
+    "    print(min_diff)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -208,14 +523,61 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 보호소에서 중성화한 동물\n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59045\n",
+    "WITH \n",
+    "    AIN AS (\n",
+    "        SELECT\n",
+    "            ANIMAL_ID,\n",
+    "            ANIMAL_TYPE,\n",
+    "            DATETIME AS IN_DATE_TIME\n",
+    "        FROM\n",
+    "            ANIMAL_INS\n",
+    "        WHERE\n",
+    "            SEX_UPON_INTAKE LIKE 'Intact%'\n",
+    "    ),\n",
+    "    AOUT AS (\n",
+    "        SELECT\n",
+    "            ANIMAL_ID,\n",
+    "            NAME,\n",
+    "            DATETIME AS OUT_DATE_TIME\n",
+    "        FROM\n",
+    "            ANIMAL_OUTS\n",
+    "        WHERE\n",
+    "            SEX_UPON_OUTCOME LIKE 'Spayed%'\n",
+    "            OR SEX_UPON_OUTCOME LIKE 'Neutered%'\n",
+    "    )\n",
+    "SELECT\n",
+    "    ANIMAL_ID, \n",
+    "    ANIMAL_TYPE,\n",
+    "    NAME\n",
+    "FROM AIN\n",
+    "JOIN AOUT USING (ANIMAL_ID)\n",
+    "WHERE\n",
+    "    IN_DATE_TIME <= OUT_DATE_TIME\n",
+    "ORDER BY\n",
+    "    ANIMAL_ID\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
