--- a/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
@@ -2,50 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 27 26 25\n",
+      "22 9 15 19\n",
+      "16 8 21 13\n",
+      "10 14 20 7\n",
+      "4 3 2 1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 16927 (배열 돌리기 2) - https://www.acmicpc.net/problem/16927\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 4 7\n",
+    "1 2 3 4\n",
+    "7 8 9 10\n",
+    "13 14 15 16\n",
+    "19 20 21 22\n",
+    "25 26 27 28''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M, R = map(int, input().split())\n",
+    "    directions = [(+1, 0), (0, +1), (-1, 0), (0, -1)]\n",
+    "\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    layers = min(N, M) // 2\n",
+    "\n",
+    "    for layer in range(layers):\n",
+    "        sr, er = layer, N-1 - layer\n",
+    "        sc, ec = layer, M-1 - layer\n",
+    "\n",
+    "        r = c = layer\n",
+    "        visited = [(r, c)]\n",
+    "        values = deque([board[r][c]])\n",
+    "\n",
+    "        d = 0\n",
+    "        cur_r, cur_c = r, c\n",
+    "\n",
+    "        while True:\n",
+    "\n",
+    "            dr, dc = directions[d]\n",
+    "            nr, nc = cur_r + dr, cur_c + dc\n",
+    "            in_range = sr <= nr <= er and sc <= nc <= ec\n",
+    "\n",
+    "            if not in_range:\n",
+    "                d += 1\n",
+    "                dr, dc = directions[d]\n",
+    "                nr, nc = cur_r + dr, cur_c + dc\n",
+    "\n",
+    "            if (nr, nc) == (r, c):\n",
+    "                break\n",
+    "\n",
+    "            visited.append((nr, nc))\n",
+    "            values.append(board[nr][nc])\n",
+    "\n",
+    "            cur_r, cur_c = nr, nc\n",
+    "\n",
+    "        values.rotate(R)\n",
+    "        for i, (vr, vc) in enumerate(visited):\n",
+    "            board[vr][vc] = values[i]\n",
+    "\n",
+    "    print(\"\\n\".join(\" \".join(map(str, row)) for row in board))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2485 (가로수) - https://www.acmicpc.net/problem/2485\n",
     "import sys\n",
+    "from math import gcd\n",
+    "from functools import reduce\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "2\n",
+    "6\n",
+    "12\n",
+    "18''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    nums = [int(input()) for _ in range(N)]\n",
+    "    diffs = set(nums[i+1] - nums[i] for i in range(N-1))\n",
+    "\n",
+    "    gcd_val = reduce(gcd, diffs)\n",
+    "    all_tree = len(range(nums[0], nums[-1] + 1, gcd_val))\n",
+    "\n",
+    "    print(all_tree - N)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -55,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Heap): 백준 1927 (최소 힙) - https://www.acmicpc.net/problem/1927\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1744 (수 묶기) - https://www.acmicpc.net/problem/1744\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +181,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): ROOT 아이템 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/273710\n",
     "```"
    ]
   },
@@ -113,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 19236 (청소년 상어) - https://www.acmicpc.net/problem/19236\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2133 (타일 채우기) - https://www.acmicpc.net/problem/2133\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(트리): 백준 11725 (트리의 부모 찾기) - https://www.acmicpc.net/problem/11725\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그래프): 백준 17471 (게리맨더링) - https://www.acmicpc.net/problem/17471\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,14 +288,29 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.3): 헤비 유저가 있는 장소 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/77487\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
