--- a/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
@@ -129,50 +129,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "12345678\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Heap): 백준 1927 (최소 힙) - https://www.acmicpc.net/problem/1927\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''9\n",
+    "0\n",
+    "12345678\n",
+    "1\n",
+    "2\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "32''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    out = []\n",
+    "    pq = []\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(N):\n",
+    "        num = int(input())\n",
+    "\n",
+    "        if not num:\n",
+    "            out.append(str(heappop(pq)) if pq else '0')\n",
+    "        else:\n",
+    "            heappush(pq, num)\n",
+    "\n",
+    "    print(\"\\n\".join(out))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 1744 (수 묶기) - https://www.acmicpc.net/problem/1744\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "0\n",
+    "1\n",
+    "2\n",
+    "4\n",
+    "3\n",
+    "5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    pos = []\n",
+    "    neg = []\n",
+    "    ones = 0\n",
+    "    zero = 0\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        num = int(input())\n",
+    "        if num > 1:\n",
+    "            pos.append(num)\n",
+    "        elif num == 1:\n",
+    "            ones += 1\n",
+    "        elif num == 0:\n",
+    "            zero += 1\n",
+    "        else:\n",
+    "            neg.append(num)\n",
+    "\n",
+    "    pos.sort(reverse=True)\n",
+    "    neg.sort()\n",
+    "\n",
+    "    ans = 0\n",
+    "\n",
+    "    for i in range(0, len(pos) - 1, 2):\n",
+    "        ans += pos[i] * pos[i+1]\n",
+    "\n",
+    "    if len(pos) % 2 == 1:\n",
+    "        ans += pos[-1]\n",
+    "\n",
+    "    for i in range(0, len(neg) - 1, 2):\n",
+    "        ans += neg[i] * neg[i+1]\n",
+    "\n",
+    "    if len(neg) % 2 == 1 and zero == 0:\n",
+    "        ans += neg[-1]\n",
+    "\n",
+    "    ans += ones\n",
+    "\n",
+    "    print(ans)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -183,6 +266,22 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): ROOT 아이템 구하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/273710\n",
+    "WITH\n",
+    "    RI AS (\n",
+    "        SELECT\n",
+    "            ITEM_ID\n",
+    "        FROM\n",
+    "            ITEM_TREE\n",
+    "        WHERE\n",
+    "            PARENT_ITEM_ID IS NULL\n",
+    "    )\n",
+    "SELECT\n",
+    "    ITEM_ID,\n",
+    "    ITEM_NAME\n",
+    "FROM RI\n",
+    "JOIN ITEM_INFO USING (ITEM_ID)\n",
+    "ORDER BY\n",
+    "    ITEM_ID ASC;\n",
     "```"
    ]
   },
