--- a/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
@@ -287,98 +287,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 19236 (청소년 상어) - https://www.acmicpc.net/problem/19236\n",
     "import sys\n",
+    "from copy import deepcopy\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12 6 14 5 4 5 6 7\n",
+    "15 1 11 7 3 7 7 5\n",
+    "10 3 8 3 16 6 1 1\n",
+    "5 8 2 7 13 6 9 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    directions = [\n",
+    "        (-1, 0), (-1, -1), (0, -1), (+1, -1),   # ↑, ↖, ←, ↙,\n",
+    "        (+1, 0), (+1, +1), (0, +1), (-1, +1)    # ↓, ↘, →, ↗\n",
+    "    ]\n",
     "\n",
-    "    pass\n",
+    "    N = 4\n",
+    "    origin_board = [[None] * N for _ in range(N)]\n",
+    "    origin_posi = [None] * (N * N)\n",
+    "\n",
+    "    for r in range(N):\n",
+    "        row = list(map(int, input().split()))\n",
+    "        for c in range(N):\n",
+    "            num, d = (row[2*c]-1), (row[2*c+1]-1)\n",
+    "            origin_board[r][c] = [num, d]\n",
+    "            origin_posi[num] = (r, c)\n",
+    "\n",
+    "    max_score = 0   # 정답\n",
+    "\n",
+    "    def dfs(sr, sc, score, board, posi):\n",
+    "        nonlocal max_score\n",
+    "\n",
+    "        # 상어 사냥\n",
+    "        fish_num, sd = board[sr][sc]\n",
+    "        score += (fish_num + 1)  # 1 인덱스 복원\n",
+    "        max_score = max(max_score, score)\n",
+    "\n",
+    "        board[sr][sc] = [-1, sd]    # -1 : 사냥 후 물고기 없음, 물고기 방향 입력.\n",
+    "        posi[fish_num] = None\n",
+    "\n",
+    "        # 사냥 후 물고기 이동\n",
+    "        for i in range(N * N):\n",
+    "            if posi[i] is None:\n",
+    "                continue\n",
+    "\n",
+    "            r, c = posi[i]\n",
+    "            f_num, fd = board[r][c]\n",
+    "\n",
+    "            for step in range(8):\n",
+    "                nd = (fd + step) % 8\n",
+    "                dr, dc = directions[nd]\n",
+    "\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                in_range = 0 <= nr < N and 0 <= nc < N\n",
+    "\n",
+    "                if not in_range or (nr, nc) == (sr, sc):    # 상어 있으면 못감\n",
+    "                    continue\n",
+    "\n",
+    "                nxt_fish_num = board[nr][nc][0]       # -1 이면 빈칸\n",
+    "\n",
+    "                board[r][c][1] = nd                   # 방향 정보 저장 후 교환\n",
+    "                board[r][c], board[nr][nc] = board[nr][nc], board[r][c]\n",
+    "\n",
+    "                posi[f_num] = (nr, nc)\n",
+    "                if nxt_fish_num != -1:              # 빈칸이 아닌 경우\n",
+    "                    posi[nxt_fish_num] = (r, c)\n",
+    "\n",
+    "                break\n",
+    "\n",
+    "        # 상어이동\n",
+    "        dr, dc = directions[sd]\n",
+    "        for dist in range(1, N):\n",
+    "            nr, nc = sr + dr*dist, sc + dc*dist\n",
+    "            in_range = 0 <= nr < N and 0 <= nc < N\n",
+    "\n",
+    "            if not in_range:        # 범위 벗어나면 종료\n",
+    "                break\n",
+    "\n",
+    "            if board[nr][nc][0] == -1:  # 빈 공간이면 다음 칸 탐색\n",
+    "                continue\n",
+    "\n",
+    "            dfs(nr, nc, score, deepcopy(board), deepcopy(posi))\n",
+    "\n",
+    "    dfs(0, 0, 0, deepcopy(origin_board), deepcopy(origin_posi))\n",
+    "    print(max_score)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2133 (타일 채우기) - https://www.acmicpc.net/problem/2133\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    if N % 2 != 0:\n",
+    "        return print(0) # 홀수 불가\n",
     "\n",
+    "    # dp[i] 3 * i 크기를 채우는 경우의 수\n",
+    "    dp = [0] * (N + 1) \n",
+    "\n",
+    "    dp[0] = 1   \n",
+    "\n",
+    "    if N >= 2 :\n",
+    "        dp[2] = 3   # 2칸 채우는 방법은 3개\n",
+    "\n",
+    "    for i in range(4, N + 1, 2):\n",
+    "        dp[i] = dp[i-2] * 3         # 맨 오른쪽에 2개 모양 고정 후 뒤 모양\n",
+    "\n",
+    "        for j in range(i - 4, -1, -2):  # 맨 오른쪽에 4개 모양 고정 후 2개씩 \n",
+    "            dp[i] += dp[j] * 2\n",
+    "\n",
+    "    print(dp[N])\n",
     "\n",
     "solve()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(트리): 백준 11725 (트리의 부모 찾기) - https://www.acmicpc.net/problem/11725\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12\n",
+    "1 2\n",
+    "1 3\n",
+    "2 4\n",
+    "3 5\n",
+    "3 6\n",
+    "4 7\n",
+    "4 8\n",
+    "5 9\n",
+    "5 10\n",
+    "6 11\n",
+    "6 12''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    graph = [[] for _ in range(N+1)]\n",
+    "\n",
+    "    for _ in range(N-1):\n",
+    "        a, b = map(int, input().split())\n",
+    "        graph[a].append(b)\n",
+    "        graph[b].append(a)\n",
+    "\n",
+    "    parent = [0] * (N+1)    # 0 은 방문 안함\n",
+    "    parent[1] = -1          # -1 은 루트\n",
+    "\n",
+    "    stack = [1]\n",
+    "    while stack:\n",
+    "        cur = stack.pop()\n",
+    "\n",
+    "        for nxt in graph[cur]:\n",
+    "            if parent[nxt] != 0:\n",
+    "                continue\n",
+    "\n",
+    "            parent[nxt] = cur\n",
+    "            stack.append(nxt)\n",
+    "\n",
+    "    print(\"\\n\".join(map(str, parent[2:])))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그래프): 백준 17471 (게리맨더링) - https://www.acmicpc.net/problem/17471\n",
     "import sys\n",
+    "from itertools import combinations\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "5 2 3 4 1 2\n",
+    "2 2 4\n",
+    "4 1 3 6 5\n",
+    "2 4 2\n",
+    "2 1 3\n",
+    "1 2\n",
+    "1 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    popul = tuple(map(int, input().split()))\n",
+    "    graph = [[] for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    for i in range(N):\n",
+    "        _, *nodes = map(int, input().split())\n",
+    "        for node in nodes:\n",
+    "            graph[i].append(node-1)\n",
+    "\n",
+    "    def is_connected(node_set):\n",
+    "        start = next(iter(node_set))\n",
+    "        stack = [start]\n",
+    "        visited = {start}\n",
+    "\n",
+    "        while stack:\n",
+    "            cur = stack.pop()\n",
+    "            for nxt in graph[cur]:\n",
+    "                if nxt not in node_set:\n",
+    "                    continue\n",
+    "\n",
+    "                if nxt in visited:\n",
+    "                    continue\n",
+    "\n",
+    "                visited.add(nxt)\n",
+    "                stack.append(nxt)\n",
+    "\n",
+    "        return len(visited) == len(node_set)\n",
+    "\n",
+    "    min_diff = INF = float('inf')\n",
+    "    other_nodes = set(range(1, N))     # 0 제외\n",
+    "\n",
+    "    for size in range(N-1):            # 0 번 고정\n",
+    "        for extra in combinations(other_nodes, size):\n",
+    "            area_a = {0, *extra}\n",
+    "            area_b = other_nodes.difference(extra)\n",
+    "\n",
+    "            if is_connected(area_a) and is_connected(area_b):\n",
+    "                sum_a = sum(popul[node] for node in area_a)\n",
+    "                sum_b = sum(popul[node] for node in area_b)\n",
+    "                min_diff = min(min_diff, abs(sum_a - sum_b))\n",
+    "\n",
+    "                if min_diff == 0:\n",
+    "                    return print(0)\n",
+    "\n",
+    "    print(min_diff if min_diff != INF else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -389,6 +608,20 @@
     "```sql\n",
     "-- 5. SQL(Lv.3): 헤비 유저가 있는 장소 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/77487\n",
+    "WITH \n",
+    "    NOTBIG AS (\n",
+    "        SELECT *,\n",
+    "            COUNT(*) OVER(PARTITION BY HOST_ID) AS CNT\n",
+    "        FROM PLACES\n",
+    "    ) \n",
+    "\n",
+    "SELECT\n",
+    "    ID,\n",
+    "    NAME,\n",
+    "    HOST_ID\n",
+    "FROM NOTBIG\n",
+    "WHERE CNT >= 2\n",
+    "ORDER BY ID;\n",
     "```"
    ]
   }
