--- a/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C24_D-07_260228.ipynb
@@ -611,7 +611,9 @@
     "WITH \n",
     "    NOTBIG AS (\n",
     "        SELECT *,\n",
-    "            COUNT(*) OVER(PARTITION BY HOST_ID) AS CNT\n",
+    "            COUNT(*) OVER(\n",
+    "\t            PARTITION BY HOST_ID\n",
+    "            ) AS CNT\n",
     "        FROM PLACES\n",
     "    ) \n",
     "\n",
